// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "va kiːg siː va gʊlh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "va dɔdɔg siː va gʊgʊlh",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "va kiːg gɔkɪŋ æːd va ɹiːvaɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "va kiːg nat siː va gʊlh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "bebe βideɾet luːpuːum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "tataateɾ βideɾenθ luːluːpuːum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "bebe abbuːlabet fluːbe",
    },
    {
      "english": "the king does not see the wolf",
      "target": "bebe non βideɾet luːpuːum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "foːweːupala soweːli lukin",
    },
    {
      "english": "the dogs see the wolves",
      "target": "sosoweːli sosoweːli lukin",
    },
    {
      "english": "i give you the bread",
      "target": "mi sina pala",
    },
    {
      "english": "the king walks at the river",
      "target": "foːweːupala sapi fiːlaʂeːl leːl",
    },
    {
      "english": "the king does not see the wolf",
      "target": "foːweːupala soweːli ala lukin",
    },
  ],
  "preset": "tokipona",
}
`;
